<?xml version="1.0"?>
<package format="2">
  <name>iusc_laser</name>
  <version>0.0.1</version>
  <description>The iusc_laser package for IUSC competition.</description>

  <maintainer email="xiang_he@buaa.edu.cn">Xiang</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <export>

  </export>
</package>
